// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RigComponent /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          createNewProject={[Function]}
          currentProjectIndex={-1}
          deleteProject={[Function]}
          error={undefined}
          manifest={null}
          projects={Array []}
          selectProject={[Function]}
          selectedView={2}
          viewerHandler={[Function]}
/>,
        <Unknown>
          <CreateProjectDialog
                    closeHandler={[Function]}
                    mustSave={true}
                    saveHandler={[Function]}
                    userId={undefined}
          />
</Unknown>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "createNewProject": [Function],
          "currentProjectIndex": -1,
          "deleteProject": [Function],
          "error": undefined,
          "manifest": null,
          "projects": Array [],
          "selectProject": [Function],
          "selectedView": 2,
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            undefined,
            undefined,
            undefined,
            <CreateProjectDialog
              closeHandler={[Function]}
              mustSave={true}
              saveHandler={[Function]}
              userId={undefined}
/>,
            false,
            undefined,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          undefined,
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "closeHandler": [Function],
              "mustSave": true,
              "saveHandler": [Function],
              "userId": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          undefined,
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            createNewProject={[Function]}
            currentProjectIndex={-1}
            deleteProject={[Function]}
            error={undefined}
            manifest={null}
            projects={Array []}
            selectProject={[Function]}
            selectedView={2}
            viewerHandler={[Function]}
/>,
          <Unknown>
            <CreateProjectDialog
                        closeHandler={[Function]}
                        mustSave={true}
                        saveHandler={[Function]}
                        userId={undefined}
            />
</Unknown>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "createNewProject": [Function],
            "currentProjectIndex": -1,
            "deleteProject": [Function],
            "error": undefined,
            "manifest": null,
            "projects": Array [],
            "selectProject": [Function],
            "selectedView": 2,
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              undefined,
              undefined,
              undefined,
              <CreateProjectDialog
                closeHandler={[Function]}
                mustSave={true}
                saveHandler={[Function]}
                userId={undefined}
/>,
              false,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            undefined,
            undefined,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "closeHandler": [Function],
                "mustSave": true,
                "saveHandler": [Function],
                "userId": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            undefined,
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RigComponent /> renders extension view correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          createNewProject={[Function]}
          currentProjectIndex={0}
          deleteProject={[Function]}
          error={undefined}
          manifest={Object {}}
          projects={
                    Array [
                              Object {
                                "extensionViews": Array [
                                  Object {
                                    "channelId": "twitch",
                                    "features": Object {
                                      "isChatEnabled": true,
                                    },
                                    "id": "1",
                                    "isPopout": false,
                                    "linked": false,
                                    "linkedUserId": "",
                                    "mode": "viewer",
                                    "opaqueId": "ARIGopaqueId",
                                    "orientation": "Portrait",
                                    "role": "Logged-Out Viewer",
                                    "type": "Panel",
                                    "x": 0,
                                    "y": 0,
                                  },
                                ],
                                "manifest": Object {},
                              },
                            ]
          }
          selectProject={[Function]}
          selectedView={0}
          viewerHandler={[Function]}
/>,
        <Unknown>
          <ExtensionViewContainer
                    configurations={undefined}
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={
                              Array [
                                        Object {
                                          "channelId": "twitch",
                                          "features": Object {
                                            "isChatEnabled": true,
                                          },
                                          "id": "1",
                                          "isPopout": false,
                                          "linked": false,
                                          "linkedUserId": "",
                                          "mode": "viewer",
                                          "opaqueId": "ARIGopaqueId",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ]
                    }
                    isDisplayed={true}
                    isLocal={undefined}
                    manifest={Object {}}
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
                    secret={undefined}
          />
</Unknown>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "createNewProject": [Function],
          "currentProjectIndex": 0,
          "deleteProject": [Function],
          "error": undefined,
          "manifest": Object {},
          "projects": Array [
            Object {
              "extensionViews": Array [
                Object {
                  "channelId": "twitch",
                  "features": Object {
                    "isChatEnabled": true,
                  },
                  "id": "1",
                  "isPopout": false,
                  "linked": false,
                  "linkedUserId": "",
                  "mode": "viewer",
                  "opaqueId": "ARIGopaqueId",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
              "manifest": Object {},
            },
          ],
          "selectProject": [Function],
          "selectedView": 0,
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            false,
            false,
            undefined,
            <ExtensionViewContainer
              configurations={undefined}
              deleteExtensionViewHandler={[Function]}
              extensionViews={
                            Array [
                                          Object {
                                            "channelId": "twitch",
                                            "features": Object {
                                              "isChatEnabled": true,
                                            },
                                            "id": "1",
                                            "isPopout": false,
                                            "linked": false,
                                            "linkedUserId": "",
                                            "mode": "viewer",
                                            "opaqueId": "ARIGopaqueId",
                                            "orientation": "Portrait",
                                            "role": "Logged-Out Viewer",
                                            "type": "Panel",
                                            "x": 0,
                                            "y": 0,
                                          },
                                        ]
              }
              isDisplayed={true}
              isLocal={undefined}
              manifest={Object {}}
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
              secret={undefined}
/>,
            false,
            false,
            undefined,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          false,
          undefined,
          Object {
            "instance": null,
            "key": "ExtensionViewContainer0",
            "nodeType": "class",
            "props": Object {
              "configurations": undefined,
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [
                Object {
                  "channelId": "twitch",
                  "features": Object {
                    "isChatEnabled": true,
                  },
                  "id": "1",
                  "isPopout": false,
                  "linked": false,
                  "linkedUserId": "",
                  "mode": "viewer",
                  "opaqueId": "ARIGopaqueId",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
              "isDisplayed": true,
              "isLocal": undefined,
              "manifest": Object {},
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
              "secret": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          undefined,
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            createNewProject={[Function]}
            currentProjectIndex={0}
            deleteProject={[Function]}
            error={undefined}
            manifest={Object {}}
            projects={
                        Array [
                                    Object {
                                      "extensionViews": Array [
                                        Object {
                                          "channelId": "twitch",
                                          "features": Object {
                                            "isChatEnabled": true,
                                          },
                                          "id": "1",
                                          "isPopout": false,
                                          "linked": false,
                                          "linkedUserId": "",
                                          "mode": "viewer",
                                          "opaqueId": "ARIGopaqueId",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ],
                                      "manifest": Object {},
                                    },
                                  ]
            }
            selectProject={[Function]}
            selectedView={0}
            viewerHandler={[Function]}
/>,
          <Unknown>
            <ExtensionViewContainer
                        configurations={undefined}
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={
                                    Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "linkedUserId": "",
                                                  "mode": "viewer",
                                                  "opaqueId": "ARIGopaqueId",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                        }
                        isDisplayed={true}
                        isLocal={undefined}
                        manifest={Object {}}
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
                        secret={undefined}
            />
</Unknown>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "createNewProject": [Function],
            "currentProjectIndex": 0,
            "deleteProject": [Function],
            "error": undefined,
            "manifest": Object {},
            "projects": Array [
              Object {
                "extensionViews": Array [
                  Object {
                    "channelId": "twitch",
                    "features": Object {
                      "isChatEnabled": true,
                    },
                    "id": "1",
                    "isPopout": false,
                    "linked": false,
                    "linkedUserId": "",
                    "mode": "viewer",
                    "opaqueId": "ARIGopaqueId",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
                "manifest": Object {},
              },
            ],
            "selectProject": [Function],
            "selectedView": 0,
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              false,
              false,
              undefined,
              <ExtensionViewContainer
                configurations={undefined}
                deleteExtensionViewHandler={[Function]}
                extensionViews={
                                Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "linkedUserId": "",
                                                  "mode": "viewer",
                                                  "opaqueId": "ARIGopaqueId",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                }
                isDisplayed={true}
                isLocal={undefined}
                manifest={Object {}}
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
                secret={undefined}
/>,
              false,
              false,
              undefined,
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            false,
            undefined,
            Object {
              "instance": null,
              "key": "ExtensionViewContainer0",
              "nodeType": "class",
              "props": Object {
                "configurations": undefined,
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [
                  Object {
                    "channelId": "twitch",
                    "features": Object {
                      "isChatEnabled": true,
                    },
                    "id": "1",
                    "isPopout": false,
                    "linked": false,
                    "linkedUserId": "",
                    "mode": "viewer",
                    "opaqueId": "ARIGopaqueId",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
                "isDisplayed": true,
                "isLocal": undefined,
                "manifest": Object {},
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
                "secret": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            undefined,
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
